# synthetic_test_data

./: .gitignore  .roomodes  README.md  __init__.py  combined_output.txt  common.py  generate_all_data.py  generate_epubs.py  generate_markdown.py  generate_pdfs.py  investigate_ebooklib_metadata.py  pyproject.toml
.roo/: version_log.md
.roo/rules-architect/: .clinerules-architect
.roo/rules-ask/: .clinerules-ask
.roo/rules-code/: .clinerules-code
.roo/rules-debug/: .clinerules-debug
.roo/rules-devops/: .clinerules-devops
.roo/rules-docs-writer/: .clinerules-docs-writer
.roo/rules-holistic-reviewer/: .clinerules-holistic-reviewer
.roo/rules-integration/: .clinerules-integration
.roo/rules-memory-bank-doctor/: .clinerules-memory-bank-doctor
.roo/rules-post-deployment-monitoring-mode/: .clinerules-post-deployment-monitoring-mode
.roo/rules-qa-tester/: .clinerules-qa-tester
.roo/rules-refinement-optimization-mode/: .clinerules-refinement-optimization-mode
.roo/rules-security-review/: .clinerules-security-review
docs/: architecture_overview.md  epub_formatting_analysis_report.md  spec_revision_guidance_unified_quantity.md  synthetic_data_requirements.md
epub_generators/: __init__.py  citations.py  content_types.py  headers.py  multimedia.py  notes.py  page_numbers.py  structure.py  toc.py
memory-bank/: activeContext.md  globalContext.md
specifications/: synthetic_data_package_specification.md
synth_data_gen/: __init__.py
tests/: test_common_utils.py  test_config_loader.py  test_integration_config_loader.py  test_main_generator.py
(+55 files in other folders)
