[project]
name = "synth_data_gen"
version = "0.1.0"
description = "A package for generating synthetic test data."
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    # "PyYAML>=6.0", # If YAML config is chosen
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://example.com/synth_data_gen" # Placeholder
Repository = "https://example.com/synth_data_gen" # Placeholder